# spotify-dj

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: search-redesign.md
docs/adr/: 001-oauth2-pkce-auth.md  002-librespot-audio-backend.md  003-single-stream-dual-deck.md  004-local-bpm-detection.md  005-waveform-caching.md  README.md
patches/vergen-gitcl/: Cargo.toml
src/: app.rs  config.rs  error.rs  main.rs
src/audio/: bpm.rs  fft.rs  mod.rs  sink.rs
src/spotify/: auth.rs  mod.rs  player.rs  web_api.rs
src/ui/: deck.rs  library.rs  mixer.rs  mod.rs  visualizer.rs
