[package]
name = "spotify-dj"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
crossterm = "0.29.0"
directories = "6.0.0"
librespot-connect = "0.8.0"
librespot-core = "0.8.0"
librespot-metadata = "0.8.0"
librespot-playback = "0.8.0"
ratatui = "0.30.0"
rspotify = { version = "0.16.1", features = ["client-reqwest"] }
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
url = "2.5.8"
webbrowser = "1.2.1"

[patch.crates-io]
vergen-gitcl = { path = "patches/vergen-gitcl" }
